Esta es una prueba que estoy haciendo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Inicia main_section -->
       <div class="main_section fadeIn">
           <h1>
-            Este es un producto increible, no sé que haces viendo lo que puedes tener
+            Estoy haciendo cambios para probar git
           </h1>
       </div>
     <!-- Fin main_section -->
