--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Inicia main_section -->
       <div class="main_section fadeIn">
           <h1>
-            Este es un producto increible, no sé que haces viendo lo que puedes tener
+            Cambié lo que decia, para probar
           </h1>
       </div>
     <!-- Fin main_section -->
