--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       <img src="imagenes/box1.png" alt="">
                   </div>
                   <h1>producto 1</h1>
-                  <p>Miles de productos hay en el mercado, pero nada como una caja con gatitos</p>
+                  <p>Voy a mejorar esta página</p>
                   <a href="formulario.html">
                     <button class="main_button">Lo quiero</button>
                   </a> 
